Fixed calendar bug on firefox

--- a/assets/css/custom.less
+++ b/assets/css/custom.less
@@ -1,10 +1,10 @@
 html, body {
   height: 100%;
-  min-width: 800px !important;
+  min-width: 960px !important;
 }
 
 #header{
-  min-width: 800px !important;
+  min-width: 960px !important;
 }
 
 .columnFields {
